// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Layout should render 1`] = `
.c5 {
  font-size: 0.85rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  cursor: pointer;
  color: #FBA52B;
}

.c5 i {
  font-size: 0.8em;
  margin-right: 4px;
}

.c14 {
  font-size: 0.85rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  cursor: pointer;
  color: #FBA52B;
  pointer-events: none;
  color: #A7A7A7;
  font-weight: 400;
}

.c14 i {
  font-size: 0.8em;
  margin-right: 4px;
}

.c6 {
  width: 190px;
}

.c7 {
  max-width: 300px;
}

.c22 {
  width: 50px;
  height: 55px;
}

.c23 {
  width: 50px;
  height: 50px;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  text-transform: uppercase;
  border-radius: 50%;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
  cursor: pointer;
  outline: none;
  background-color: #FBA52B;
  color: #FFFFFF;
  font-weight: 600;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c23 i {
  font-size: 1.3em;
}

.c23:hover {
  background-color: #EC7E00;
}

.c23:focus {
  background-color: #EC7E00;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  white-space: nowrap;
  margin: 0 5px 3px 0;
}

.c1 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 1;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-bottom: 1px solid #D8D8D8;
  background-image: url(/images/food.jpg);
  background-color: #A7A7A7;
  background-size: cover;
  background-position: center;
}

.c3 {
  width: 100%;
  background: rgba(0,0,0,0.8);
  height: 80px;
  padding: 0 30px;
}

.c4 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 1200px;
  margin: 0 auto;
}

.c8 {
  font-size: 1.3rem;
  text-align: center;
  font-weight: 400;
  color: #A7A7A7;
  display: none;
}

.c9 {
  background-color: #F3F3F3;
  border-bottom: 1px solid #D8D8D8;
  padding: 20px 30px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 1200px;
  margin: 0 auto;
}

.c16 {
  width: 100%;
  position: absolute;
  left: 0;
  bottom: 0;
  overflow: hidden;
  z-index: 1;
}

.c17 {
  background-color: #2f3235;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 20px 0;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #D8D8D8;
}

.c18:first-of-type:after {
  content: ' | ';
}

.c18:not(:first-of-type) {
  margin-left: 5px;
}

.c18:not(:last-of-type):after {
  margin-left: 3px;
}

.c18:last-of-type {
  display: none;
}

.c19 {
  font-weight: 300;
  margin-right: 3px;
}

.c20 {
  font-weight: 300;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 100vh;
  position: relative;
}

.c15 {
  margin-bottom: 60px;
  padding: 0 30px;
}

.c21 {
  position: fixed;
  bottom: 1%;
  right: 4%;
  z-index: 1;
  display: none;
  -webkit-animation: RcxFP 0.15s linear;
  animation: RcxFP 0.15s linear;
}

@media only screen and (min-width:330px) {
  .c5 {
    font-size: 1rem;
  }
}

@media only screen and (min-width:540px) {
  .c5 {
    -webkit-transition: color 0.2s ease-out;
    transition: color 0.2s ease-out;
  }

  .c5:hover {
    color: #EC7E00;
  }
}

@media only screen and (min-width:330px) {
  .c14 {
    font-size: 1rem;
  }
}

@media only screen and (min-width:540px) {
  .c14 {
    -webkit-transition: color 0.2s ease-out;
    transition: color 0.2s ease-out;
  }

  .c14:hover {
    color: #EC7E00;
  }
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:992px) {
  .c6 {
    width: 200px;
  }
}

@media only screen and (min-width:600px) {
  .c11 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media only screen and (max-width:330px) {
  .c13 {
    font-size: 0.85rem;
  }
}

@media only screen and (min-width:600px) {
  .c13 {
    margin: 0 5px 0 0;
  }
}

@media only screen and (min-width:768px) {
  .c3 {
    height: 80px;
  }
}

@media only screen and (min-width:768px) {
  .c4 {
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media only screen and (min-width:1200px) {
  .c4 {
    padding: 0;
  }
}

@media only screen and (min-width:350px) {

}

@media only screen and (min-width:768px) {
  .c8 {
    display: block;
  }
}

@media only screen and (min-width:992px) {
  .c8 {
    font-size: 1.6rem;
  }
}

@media only screen and (min-width:1200px) {
  .c18:first-of-type:after {
    content: '';
  }
}

@media only screen and (min-width:375px) {
  .c18:not(:first-of-type) {
    margin-left: 7px;
  }
}

@media only screen and (min-width:375px) {
  .c18:not(:last-of-type):after {
    margin-left: 5px;
  }
}

@media only screen and (min-width:1200px) {
  .c18:not(:last-of-type):after {
    content: ' | ';
  }
}

@media only screen and (min-width:1200px) {
  .c18:last-of-type {
    display: block;
  }
}

@media only screen and (max-width:330px) {
  .c18 {
    font-size: 0.85rem;
  }
}

@media only screen and (max-width:330px) {
  .c19 {
    font-size: 0.85rem;
  }
}

@media only screen and (max-width:330px) {
  .c20 {
    font-size: 0.85rem;
  }
}

<div
  class="c0"
>
  <header
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <a
            class="c5"
          >
            <h1
              class="c6"
            >
              <img
                alt="FooDublin Logo"
                class="c7"
                src="/images/logo.svg"
              />
            </h1>
          </a>
          <h2
            class="c8"
          >
            Discover the best food in Dublin
          </h2>
        </div>
      </div>
    </div>
    <div
      class="c9"
      data-testid="header-bar"
    >
      <div
        class="c10"
      >
        <div
          class="c11"
          data-testid="breadcrumbs"
        >
          <div
            class="c12"
          >
            <div
              class="c13"
            >
              <a
                class="c14"
                disabled=""
              >
                Home
              </a>
            </div>
          </div>
        </div>
        <a
          class="c5"
        >
          <i
            class="material-icons"
          >
            bookmarks
          </i>
          FAVORITES
        </a>
      </div>
    </div>
  </header>
  <main
    class="c15"
  >
    <div>
      <h1>
        Hello World
      </h1>
    </div>
  </main>
  <footer
    class="c16"
  >
    <div
      class="c17"
    >
      <div
        class="c18"
      >
        <p
          class="c19"
        >
          ©2022
        </p>
        <p
          class="c19"
        >
          BY
        </p>
        <a
          class="c5"
          href="https://jdmiguel.netlify.app"
        >
          JDMIGUEL
        </a>
      </div>
      <div
        class="c18"
      >
        <a
          class="c5"
        >
          <i
            class="material-icons"
          >
            bookmarks
          </i>
          FAVORITES
        </a>
      </div>
      <div
        class="c18"
      >
        <p
          class="c20"
        />
        <a
          class="c5"
          href="https://foodublin-design-system.netlify.app"
        >
          DESIGN SYSTEM
        </a>
      </div>
    </div>
  </footer>
  <div
    class="c21"
  >
    <div
      class="c22"
    >
      <button
        class="c23"
        type="button"
      >
        <i
          class="material-icons"
        >
          arrow_upward
        </i>
      </button>
    </div>
  </div>
</div>
`;

exports[`Component: Layout should render the extended footer 1`] = `
.c5 {
  font-size: 0.85rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  cursor: pointer;
  color: #FBA52B;
}

.c5 i {
  font-size: 0.8em;
  margin-right: 4px;
}

.c14 {
  font-size: 0.85rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  cursor: pointer;
  color: #FBA52B;
  pointer-events: none;
  color: #A7A7A7;
  font-weight: 400;
}

.c14 i {
  font-size: 0.8em;
  margin-right: 4px;
}

.c6 {
  width: 190px;
}

.c7 {
  max-width: 300px;
}

.c22 {
  width: 50px;
  height: 55px;
}

.c23 {
  width: 50px;
  height: 50px;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  text-transform: uppercase;
  border-radius: 50%;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
  cursor: pointer;
  outline: none;
  background-color: #FBA52B;
  color: #FFFFFF;
  font-weight: 600;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c23 i {
  font-size: 1.3em;
}

.c23:hover {
  background-color: #EC7E00;
}

.c23:focus {
  background-color: #EC7E00;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  white-space: nowrap;
  margin: 0 5px 3px 0;
}

.c1 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 1;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-bottom: 1px solid #D8D8D8;
  background-image: url(/images/food.jpg);
  background-color: #A7A7A7;
  background-size: cover;
  background-position: center;
}

.c3 {
  width: 100%;
  background: rgba(0,0,0,0.8);
  height: 80px;
  padding: 0 30px;
}

.c4 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 1200px;
  margin: 0 auto;
}

.c8 {
  font-size: 1.3rem;
  text-align: center;
  font-weight: 400;
  color: #A7A7A7;
  display: none;
}

.c9 {
  background-color: #F3F3F3;
  border-bottom: 1px solid #D8D8D8;
  padding: 20px 30px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 1200px;
  margin: 0 auto;
}

.c16 {
  width: 100%;
  position: absolute;
  left: 0;
  bottom: 0;
  overflow: hidden;
  z-index: 1;
}

.c17 {
  background-color: #2f3235;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 20px 0;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #D8D8D8;
}

.c18:first-of-type:after {
  content: ' | ';
}

.c18:not(:first-of-type) {
  margin-left: 5px;
}

.c18:not(:last-of-type):after {
  margin-left: 3px;
}

.c18:last-of-type {
  display: none;
}

.c19 {
  font-weight: 300;
  margin-right: 3px;
}

.c20 {
  font-weight: 300;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 100vh;
  position: relative;
}

.c15 {
  margin-bottom: 60px;
  padding: 0 30px;
}

.c21 {
  position: fixed;
  bottom: 1%;
  right: 4%;
  z-index: 1;
  display: none;
  -webkit-animation: RcxFP 0.15s linear;
  animation: RcxFP 0.15s linear;
}

@media only screen and (min-width:330px) {
  .c5 {
    font-size: 1rem;
  }
}

@media only screen and (min-width:540px) {
  .c5 {
    -webkit-transition: color 0.2s ease-out;
    transition: color 0.2s ease-out;
  }

  .c5:hover {
    color: #EC7E00;
  }
}

@media only screen and (min-width:330px) {
  .c14 {
    font-size: 1rem;
  }
}

@media only screen and (min-width:540px) {
  .c14 {
    -webkit-transition: color 0.2s ease-out;
    transition: color 0.2s ease-out;
  }

  .c14:hover {
    color: #EC7E00;
  }
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:992px) {
  .c6 {
    width: 200px;
  }
}

@media only screen and (min-width:600px) {
  .c11 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media only screen and (max-width:330px) {
  .c13 {
    font-size: 0.85rem;
  }
}

@media only screen and (min-width:600px) {
  .c13 {
    margin: 0 5px 0 0;
  }
}

@media only screen and (min-width:768px) {
  .c3 {
    height: 80px;
  }
}

@media only screen and (min-width:768px) {
  .c4 {
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media only screen and (min-width:1200px) {
  .c4 {
    padding: 0;
  }
}

@media only screen and (min-width:350px) {

}

@media only screen and (min-width:768px) {
  .c8 {
    display: block;
  }
}

@media only screen and (min-width:992px) {
  .c8 {
    font-size: 1.6rem;
  }
}

@media only screen and (min-width:1200px) {
  .c18:first-of-type:after {
    content: '';
  }
}

@media only screen and (min-width:375px) {
  .c18:not(:first-of-type) {
    margin-left: 7px;
  }
}

@media only screen and (min-width:375px) {
  .c18:not(:last-of-type):after {
    margin-left: 5px;
  }
}

@media only screen and (min-width:1200px) {
  .c18:not(:last-of-type):after {
    content: ' | ';
  }
}

@media only screen and (min-width:1200px) {
  .c18:last-of-type {
    display: block;
  }
}

@media only screen and (max-width:330px) {
  .c18 {
    font-size: 0.85rem;
  }
}

@media only screen and (max-width:330px) {
  .c19 {
    font-size: 0.85rem;
  }
}

@media only screen and (max-width:330px) {
  .c20 {
    font-size: 0.85rem;
  }
}

<div
  class="c0"
>
  <header
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <a
            class="c5"
          >
            <h1
              class="c6"
            >
              <img
                alt="FooDublin Logo"
                class="c7"
                src="/images/logo.svg"
              />
            </h1>
          </a>
          <h2
            class="c8"
          >
            Discover the best food in Dublin
          </h2>
        </div>
      </div>
    </div>
    <div
      class="c9"
      data-testid="header-bar"
    >
      <div
        class="c10"
      >
        <div
          class="c11"
          data-testid="breadcrumbs"
        >
          <div
            class="c12"
          >
            <div
              class="c13"
            >
              <a
                class="c14"
                disabled=""
              >
                Home
              </a>
            </div>
          </div>
        </div>
        <a
          class="c5"
        >
          <i
            class="material-icons"
          >
            bookmarks
          </i>
          FAVORITES
        </a>
      </div>
    </div>
  </header>
  <main
    class="c15"
  >
    <div>
      <h1>
        Hello World
      </h1>
    </div>
  </main>
  <footer
    class="c16"
  >
    <div
      class="c17"
    >
      <div
        class="c18"
      >
        <p
          class="c19"
        >
          ©2022
        </p>
        <p
          class="c19"
        >
          BY
        </p>
        <a
          class="c5"
          href="https://jdmiguel.netlify.app"
        >
          JDMIGUEL
        </a>
      </div>
      <div
        class="c18"
      >
        <a
          class="c5"
        >
          <i
            class="material-icons"
          >
            bookmarks
          </i>
          FAVORITES
        </a>
      </div>
      <div
        class="c18"
      >
        <p
          class="c20"
        />
        <a
          class="c5"
          href="https://foodublin-design-system.netlify.app"
        >
          DESIGN SYSTEM
        </a>
      </div>
    </div>
  </footer>
  <div
    class="c21"
  >
    <div
      class="c22"
    >
      <button
        class="c23"
        type="button"
      >
        <i
          class="material-icons"
        >
          arrow_upward
        </i>
      </button>
    </div>
  </div>
</div>
`;

exports[`Component: Layout should render the extended header 1`] = `
.c6 {
  font-size: 0.85rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  cursor: pointer;
  color: #FBA52B;
}

.c6 i {
  font-size: 0.8em;
  margin-right: 4px;
}

.c7 {
  width: 225px;
  margin: 15px 0 25px;
}

.c8 {
  max-width: 300px;
}

.c5 svg {
  border: 0;
  color: transparent;
  -webkit-transition: fill ease-out 250ms;
  transition: fill ease-out 250ms;
  fill: #FBA52B;
}

.c5 path:not(:first-of-type) {
  fill: #171819;
  -webkit-transform-origin: 130px 106px;
  -ms-transform-origin: 130px 106px;
  transform-origin: 130px 106px;
}

.c5:hover svg {
  fill: #EC7E00;
}

.c5:hover path:nth-of-type(2) {
  -webkit-animation: WTuhh 560ms ease-in-out;
  animation: WTuhh 560ms ease-in-out;
}

.c14 {
  width: 100%;
  border-radius: 4px;
  padding: 0 20px;
  background: #F3F3F3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c14 i {
  font-size: 1.2rem;
  color: #A7A7A7;
  margin-right: 10px;
}

.c15 {
  width: 100%;
  height: 55px;
  padding: 10px 0;
  line-height: 20px;
  border: none;
  outline: none;
  color: #2f3235;
  background: transparent;
  cursor: pointer;
  outline: none;
  -webkit-tap-highlight-color: transparent;
}

.c26 {
  color: #585858;
  font-size: 1.35rem;
  font-weight: 500;
}

.c32 {
  width: 100%;
  height: 55px;
}

.c41 {
  width: 50px;
  height: 55px;
}

.c33 {
  width: 100%;
  height: 100%;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  text-transform: uppercase;
  padding: 0 15px;
  border-radius: 4px;
  cursor: pointer;
  outline: none;
  background-color: #FBA52B;
  color: #FFFFFF;
  font-weight: 600;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c33 i {
  margin-right: 6px;
  font-size: 1.3em;
}

.c33:hover {
  background-color: #EC7E00;
}

.c33:focus {
  background-color: #EC7E00;
}

.c42 {
  width: 50px;
  height: 50px;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  text-transform: uppercase;
  border-radius: 50%;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
  cursor: pointer;
  outline: none;
  background-color: #FBA52B;
  color: #FFFFFF;
  font-weight: 600;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c42 i {
  font-size: 1.3em;
}

.c42:hover {
  background-color: #EC7E00;
}

.c42:focus {
  background-color: #EC7E00;
}

.c12 {
  position: relative;
  cursor: pointer;
}

.c13 {
  background-color: #F3F3F3;
  border-radius: 4px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c13:hover {
  background-color: #FDF3E5;
}

.c16 {
  visibility: hidden;
  opacity: 0;
  -webkit-transform: translateY(10px);
  -ms-transform: translateY(10px);
  transform: translateY(10px);
  -webkit-transition: opacity 0.2s ease 0s,-webkit-transform 0.2s ease 0s;
  -webkit-transition: opacity 0.2s ease 0s,transform 0.2s ease 0s;
  transition: opacity 0.2s ease 0s,transform 0.2s ease 0s;
  position: absolute;
  box-sizing: border-box;
  background: #F3F3F3;
  z-index: 2;
  top: 55px;
  left: 0;
  padding: 0;
  width: 100%;
  height: auto;
  max-height: 400px;
  overflow: auto;
  box-shadow: 0 2px 2px rgba(0,0,0,0.35);
  border: 1px solid #F3F3F3;
  border-radius: 0 0 4px 4px;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  border-top: 0;
}

.c17 {
  width: 100%;
  -webkit-tap-highlight-color: transparent;
}

.c22 {
  position: relative;
  border-radius: 4px;
  background-color: #F3F3F3;
}

.c23 {
  width: 100%;
  height: 55px;
  background-color: #F3F3F3;
  line-height: 55px;
  padding: 0 4px 0 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  cursor: pointer;
  outline: none;
  -webkit-tap-highlight-color: transparent;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -moz-user-select: none;
}

.c23 i:first-of-type {
  font-size: 1rem;
  margin-left: 5px;
  margin-right: 10px;
  color: #D48C24;
}

.c23:hover {
  background-color: #FDF3E5;
}

.c23 i:last-of-type {
  position: absolute;
  z-index: 1;
  top: 14px;
  right: 7px;
  font-size: 1.7rem;
}

.c24 {
  visibility: hidden;
  opacity: 0;
  overflow: auto;
  -webkit-transition: opacity 0.2s ease 0s;
  transition: opacity 0.2s ease 0s;
  position: absolute;
  box-sizing: border-box;
  background-color: #F3F3F3;
  z-index: 2;
  top: 0;
  left: 0;
  padding: 20px 10px 10px;
  width: 100%;
  height: 100%;
  max-height: 100vh;
  border: 1px solid #F3F3F3;
  border-radius: 4px;
  border-top: 0;
  border-bottom: 0;
  outline: none;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 10px;
  margin: 10px 0 15px;
}

.c27 {
  cursor: pointer;
  line-height: 0;
  background-color: transparent;
  outline: none;
  -webkit-tap-highlight-color: transparent;
  margin-top: 4px;
}

.c27 i {
  font-size: 1.1rem;
  font-weight: 600;
}

.c27 i {
  color: #585858;
  font-size: 1.5rem;
}

.c28 {
  width: 100%;
  height: 55px;
  border-bottom: 1px solid #E5EAED;
  list-style: none;
  display: block;
  overflow: hidden;
  color: #2f3235;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 9px 11px;
  cursor: pointer;
  outline: none;
  -webkit-tap-highlight-color: transparent;
}

.c28:hover {
  background-color: #FDF3E5;
}

.c28:focus {
  background-color: #FDF3E5;
}

.c30 {
  width: 18px;
  margin-right: 12px;
}

.c29 {
  color: #2f3235;
  font-size: 1rem;
  font-weight: 400;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0 0 25px;
}

.c18 {
  background-color: #A7A7A7;
  width: 100%;
  height: 1px;
  margin: 0 0 25px 0;
}

.c19 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c19:first-child {
  margin-right: 10px;
}

.c20 {
  width: 100%;
  margin: 0 10px 15px 0;
}

.c31 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 10px;
  min-width: 90px;
  width: 100%;
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-bottom: 1px solid #D8D8D8;
  background-image: url(/images/food.jpg);
  background-color: #A7A7A7;
  background-size: cover;
  background-position: center;
}

.c2 {
  width: 100%;
  background: rgba(0,0,0,0.8);
  height: 550px;
  padding: 0 30px;
}

.c3 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  display: none;
}

.c9 {
  font-size: 1.25rem;
  text-align: center;
  font-weight: 400;
  color: #A7A7A7;
  margin-bottom: 35px;
}

.c35 {
  width: 100%;
  position: absolute;
  left: 0;
  bottom: 0;
  overflow: hidden;
  z-index: 1;
}

.c36 {
  background-color: #2f3235;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 20px 0;
}

.c37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #D8D8D8;
}

.c37:first-of-type:after {
  content: ' | ';
}

.c37:not(:first-of-type) {
  margin-left: 5px;
}

.c37:not(:last-of-type):after {
  margin-left: 3px;
}

.c37:last-of-type {
  display: none;
}

.c38 {
  font-weight: 300;
  margin-right: 3px;
}

.c39 {
  font-weight: 300;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 100vh;
  position: relative;
}

.c34 {
  margin-bottom: 60px;
  padding: 0 30px;
}

.c40 {
  position: fixed;
  bottom: 1%;
  right: 4%;
  z-index: 1;
  display: none;
  -webkit-animation: RcxFP 0.15s linear;
  animation: RcxFP 0.15s linear;
}

@media only screen and (min-width:330px) {
  .c6 {
    font-size: 1rem;
  }
}

@media only screen and (min-width:540px) {
  .c6 {
    -webkit-transition: color 0.2s ease-out;
    transition: color 0.2s ease-out;
  }

  .c6:hover {
    color: #EC7E00;
  }
}

@media only screen and (min-width:768px) {
  .c7 {
    width: 270px;
  }
}

@media only screen and (min-width:992px) {
  .c7 {
    width: 300px;
    margin: 0 0 30px;
  }
}

@media only screen and (min-width:768px) {
  .c14 {
    max-width: 550px;
  }
}

@media only screen and (min-width:992px) {
  .c26 {
    font-size: 1.45rem;
  }
}

@media only screen and (min-width:768px) {
  .c17 {
    min-height: 200px;
  }
}

@media only screen and (min-width:768px) {
  .c21 {
    position: relative;
  }
}

@media only screen and (min-width:768px) {
  .c24 {
    max-height: 440px;
    height: auto;
    padding: 0;
    box-shadow: 0 2px 2px rgba(0,0,0,0.35);
    -webkit-transition: opacity 0.2s ease 0s,-webkit-transform 0.2s ease 0s;
    -webkit-transition: opacity 0.2s ease 0s,transform 0.2s ease 0s;
    transition: opacity 0.2s ease 0s,transform 0.2s ease 0s;
    -webkit-transform: translateY(20px);
    -ms-transform: translateY(20px);
    transform: translateY(20px);
  }
}

@media only screen and (min-width:768px) {
  .c25 {
    display: none;
  }
}

@media only screen and (min-width:992px) {
  .c29 {
    font-size: 0.9rem;
  }
}

@media only screen and (min-width:768px) {
  .c10 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media only screen and (min-width:1200px) {
  .c10 {
    max-width: 1200px;
  }
}

@media only screen and (min-width:768px) {
  .c11 {
    -webkit-flex: 0.5;
    -ms-flex: 0.5;
    flex: 0.5;
    margin: 0 10px 0 0;
  }
}

@media only screen and (min-width:992px) {
  .c11 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    margin: 0;
  }
}

@media only screen and (min-width:768px) {
  .c18 {
    display: none;
  }
}

@media only screen and (min-width:992px) {
  .c18 {
    display: block;
    width: 1px;
    height: 90%;
    margin: 0 20px 0;
  }
}

@media only screen and (min-width:768px) {
  .c19 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: space-around;
    -webkit-justify-content: space-around;
    -ms-flex-pack: space-around;
    justify-content: space-around;
    margin-bottom: 0;
  }

  .c19:first-child {
    margin-right: 0;
  }
}

@media only screen and (min-width:768px) {
  .c20 {
    margin: 0 10px 0 0;
  }
}

@media only screen and (min-width:768px) {
  .c31 {
    -webkit-flex: 0;
    -ms-flex: 0;
    flex: 0;
    margin-bottom: 0;
  }
}

@media only screen and (min-width:768px) {
  .c2 {
    height: 440px;
  }
}

@media only screen and (min-width:1200px) {
  .c4 {
    display: block;
    position: absolute;
    top: 0;
    right: 0;
  }
}

@media only screen and (min-width:350px) {
  .c9 {
    font-size: 1.4rem;
  }
}

@media only screen and (min-width:768px) {
  .c9 {
    font-size: 2rem;
  }
}

@media only screen and (min-width:992px) {
  .c9 {
    font-size: 2.5rem;
  }
}

@media only screen and (min-width:1200px) {
  .c37:first-of-type:after {
    content: '';
  }
}

@media only screen and (min-width:375px) {
  .c37:not(:first-of-type) {
    margin-left: 7px;
  }
}

@media only screen and (min-width:375px) {
  .c37:not(:last-of-type):after {
    margin-left: 5px;
  }
}

@media only screen and (min-width:1200px) {
  .c37:not(:last-of-type):after {
    content: ' | ';
  }
}

@media only screen and (min-width:1200px) {
  .c37:last-of-type {
    display: block;
  }
}

@media only screen and (max-width:330px) {
  .c37 {
    font-size: 0.85rem;
  }
}

@media only screen and (max-width:330px) {
  .c38 {
    font-size: 0.85rem;
  }
}

@media only screen and (max-width:330px) {
  .c39 {
    font-size: 0.85rem;
  }
}

<div
  class="c0"
>
  <header
    class=""
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <a
              aria-label="View source on GitHub"
              class="c5"
              href="https://github.com/jdmiguel/foodublin"
              rel="noopener noreferrer"
            >
              <svg
                aria-hidden="true"
                height="80"
                viewBox="0 0 250 250"
                width="80"
              >
                <path
                  d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"
                />
                <path
                  d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
                />
                <path
                  d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
                />
              </svg>
            </a>
          </div>
          <a
            class="c6"
          >
            <h1
              class="c7"
            >
              <img
                alt="FooDublin Logo"
                class="c8"
                src="/images/logo.svg"
              />
            </h1>
          </a>
          <h2
            class="c9"
          >
            Discover the best food in Dublin
          </h2>
          <div
            class="c10"
            data-testid="finder"
          >
            <div
              class="c11"
            >
              <div
                class="c12"
                data-testid="autocomplete"
              >
                <div
                  class="c13"
                >
                  <div
                    class="c14"
                    data-testid="input-wrapper"
                  >
                    <i
                      class="material-icons"
                      data-testid="input-icon"
                    >
                      search
                    </i>
                    <input
                      class="c15"
                      placeholder="Search for locals..."
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="c16"
                  data-testid="listbox-wrapper"
                >
                  <ul
                    class="c17"
                  />
                </div>
              </div>
            </div>
            <span
              class="c18"
            />
            <div
              class="c19"
            >
              <div
                class="c20"
              >
                <div
                  class="c21"
                  data-testid="dropdown"
                >
                  <div
                    class="c22"
                  >
                    <button
                      class="c23"
                      type="button"
                    >
                      <i
                        class="material-icons"
                        data-testid="label-icon"
                      >
                        near_me
                      </i>
                      <span>
                        Select location
                      </span>
                      <i
                        class="material-icons"
                      >
                        arrow_drop_down
                      </i>
                    </button>
                  </div>
                  <ul
                    class="c24"
                    data-testid="dropdown-list"
                    tabindex="0"
                  >
                    <div
                      class="c25"
                    >
                      <h4
                        class="c26"
                      >
                        Select location
                      </h4>
                      <button
                        class="c27"
                        type="button"
                      >
                        <i
                          class="material-icons"
                        >
                          close
                        </i>
                      </button>
                    </div>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Dublin
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        South City West
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Temple Bar
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Clondalkin
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Swords
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Tallaght
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Blanchardstown
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        South City East
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Dundrum
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Finglas
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Ballyfermot
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Santry
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Lucan
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Artane
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Malahide
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Dun Laoghaire
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Walkinstown
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Blackrock
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Palmerstown
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Rathmines
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Balbriggan
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Ballybrack
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Smithfield
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Crumlin
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Castleknock
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Howth
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Cabra
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Whitehall
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Portmarnock
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <p
                        class="c29"
                      >
                        Kimmage
                      </p>
                    </li>
                  </ul>
                </div>
              </div>
              <div
                class="c20"
              >
                <div
                  class="c21"
                  data-testid="dropdown"
                >
                  <div
                    class="c22"
                  >
                    <button
                      class="c23"
                      type="button"
                    >
                      <i
                        class="material-icons"
                        data-testid="label-icon"
                      >
                        restaurant
                      </i>
                      <span>
                        Select cuisine
                      </span>
                      <i
                        class="material-icons"
                      >
                        arrow_drop_down
                      </i>
                    </button>
                  </div>
                  <ul
                    class="c24"
                    data-testid="dropdown-list"
                    tabindex="0"
                  >
                    <div
                      class="c25"
                    >
                      <h4
                        class="c26"
                      >
                        Select cuisine
                      </h4>
                      <button
                        class="c27"
                        type="button"
                      >
                        <i
                          class="material-icons"
                        >
                          close
                        </i>
                      </button>
                    </div>
                    <li
                      class="c28"
                    >
                      <img
                        alt="Irish"
                        class="c30"
                        src="/images/stew.svg"
                      />
                      <p
                        class="c29"
                      >
                        Irish
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <img
                        alt="Italian"
                        class="c30"
                        src="/images/pizza.svg"
                      />
                      <p
                        class="c29"
                      >
                        Italian
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <img
                        alt="Mediterranean"
                        class="c30"
                        src="/images/bruschetta.svg"
                      />
                      <p
                        class="c29"
                      >
                        Mediterranean
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <img
                        alt="Asian"
                        class="c30"
                        src="/images/rice.svg"
                      />
                      <p
                        class="c29"
                      >
                        Asian
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <img
                        alt="Healthy Food"
                        class="c30"
                        src="/images/healthy_food.svg"
                      />
                      <p
                        class="c29"
                      >
                        Healthy Food
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <img
                        alt="Indian"
                        class="c30"
                        src="/images/gulab.svg"
                      />
                      <p
                        class="c29"
                      >
                        Indian
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <img
                        alt="Mexican"
                        class="c30"
                        src="/images/taco.svg"
                      />
                      <p
                        class="c29"
                      >
                        Mexican
                      </p>
                    </li>
                    <li
                      class="c28"
                    >
                      <img
                        alt="Fast Food"
                        class="c30"
                        src="/images/fries.svg"
                      />
                      <p
                        class="c29"
                      >
                        Fast Food
                      </p>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
            <div
              class="c31"
            >
              <div
                class="c32"
              >
                <button
                  class="c33"
                  type="button"
                >
                  Search
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
  <main
    class="c34"
  >
    <div>
      <h1>
        Hello World
      </h1>
    </div>
  </main>
  <footer
    class="c35"
  >
    <div
      class="c36"
    >
      <div
        class="c37"
      >
        <p
          class="c38"
        >
          ©2022
        </p>
        <p
          class="c38"
        >
          BY
        </p>
        <a
          class="c6"
          href="https://jdmiguel.netlify.app"
        >
          JDMIGUEL
        </a>
      </div>
      <div
        class="c37"
      >
        <a
          class="c6"
        >
          <i
            class="material-icons"
          >
            bookmarks
          </i>
          FAVORITES
        </a>
      </div>
      <div
        class="c37"
      >
        <p
          class="c39"
        />
        <a
          class="c6"
          href="https://foodublin-design-system.netlify.app"
        >
          DESIGN SYSTEM
        </a>
      </div>
    </div>
  </footer>
  <div
    class="c40"
  >
    <div
      class="c41"
    >
      <button
        class="c42"
        type="button"
      >
        <i
          class="material-icons"
        >
          arrow_upward
        </i>
      </button>
    </div>
  </div>
</div>
`;

exports[`Component: Layout should render the footer veil 1`] = `
.c5 {
  font-size: 0.85rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  cursor: pointer;
  color: #FBA52B;
}

.c5 i {
  font-size: 0.8em;
  margin-right: 4px;
}

.c14 {
  font-size: 0.85rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  cursor: pointer;
  color: #FBA52B;
  pointer-events: none;
  color: #A7A7A7;
  font-weight: 400;
}

.c14 i {
  font-size: 0.8em;
  margin-right: 4px;
}

.c6 {
  width: 190px;
}

.c7 {
  max-width: 300px;
}

.c23 {
  width: 50px;
  height: 55px;
}

.c24 {
  width: 50px;
  height: 50px;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  text-transform: uppercase;
  border-radius: 50%;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
  cursor: pointer;
  outline: none;
  background-color: #FBA52B;
  color: #FFFFFF;
  font-weight: 600;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c24 i {
  font-size: 1.3em;
}

.c24:hover {
  background-color: #EC7E00;
}

.c24:focus {
  background-color: #EC7E00;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  white-space: nowrap;
  margin: 0 5px 3px 0;
}

.c1 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 1;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-bottom: 1px solid #D8D8D8;
  background-image: url(/images/food.jpg);
  background-color: #A7A7A7;
  background-size: cover;
  background-position: center;
}

.c3 {
  width: 100%;
  background: rgba(0,0,0,0.8);
  height: 80px;
  padding: 0 30px;
}

.c4 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 1200px;
  margin: 0 auto;
}

.c8 {
  font-size: 1.3rem;
  text-align: center;
  font-weight: 400;
  color: #A7A7A7;
  display: none;
}

.c9 {
  background-color: #F3F3F3;
  border-bottom: 1px solid #D8D8D8;
  padding: 20px 30px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 1200px;
  margin: 0 auto;
}

.c16 {
  width: 100%;
  position: absolute;
  left: 0;
  bottom: 0;
  overflow: hidden;
  z-index: 1;
}

.c17 {
  background-color: #F3F3F3;
  height: 192px;
  opacity: 0.6;
  -webkit-animation: RcxFP 0.15s linear;
  animation: RcxFP 0.15s linear;
}

.c18 {
  background-color: #2f3235;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 20px 0;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #D8D8D8;
}

.c19:first-of-type:after {
  content: ' | ';
}

.c19:not(:first-of-type) {
  margin-left: 5px;
}

.c19:not(:last-of-type):after {
  margin-left: 3px;
}

.c19:last-of-type {
  display: none;
}

.c20 {
  font-weight: 300;
  margin-right: 3px;
}

.c21 {
  font-weight: 300;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 100vh;
  position: relative;
}

.c15 {
  margin-bottom: 60px;
  padding: 0 30px;
}

.c22 {
  position: fixed;
  bottom: 1%;
  right: 4%;
  z-index: 1;
  display: none;
  -webkit-animation: RcxFP 0.15s linear;
  animation: RcxFP 0.15s linear;
}

@media only screen and (min-width:330px) {
  .c5 {
    font-size: 1rem;
  }
}

@media only screen and (min-width:540px) {
  .c5 {
    -webkit-transition: color 0.2s ease-out;
    transition: color 0.2s ease-out;
  }

  .c5:hover {
    color: #EC7E00;
  }
}

@media only screen and (min-width:330px) {
  .c14 {
    font-size: 1rem;
  }
}

@media only screen and (min-width:540px) {
  .c14 {
    -webkit-transition: color 0.2s ease-out;
    transition: color 0.2s ease-out;
  }

  .c14:hover {
    color: #EC7E00;
  }
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:992px) {
  .c6 {
    width: 200px;
  }
}

@media only screen and (min-width:600px) {
  .c11 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media only screen and (max-width:330px) {
  .c13 {
    font-size: 0.85rem;
  }
}

@media only screen and (min-width:600px) {
  .c13 {
    margin: 0 5px 0 0;
  }
}

@media only screen and (min-width:768px) {
  .c3 {
    height: 80px;
  }
}

@media only screen and (min-width:768px) {
  .c4 {
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media only screen and (min-width:1200px) {
  .c4 {
    padding: 0;
  }
}

@media only screen and (min-width:350px) {

}

@media only screen and (min-width:768px) {
  .c8 {
    display: block;
  }
}

@media only screen and (min-width:992px) {
  .c8 {
    font-size: 1.6rem;
  }
}

@media only screen and (min-width:768px) {
  .c17 {
    height: 172px;
  }
}

@media only screen and (min-width:1200px) {
  .c19:first-of-type:after {
    content: '';
  }
}

@media only screen and (min-width:375px) {
  .c19:not(:first-of-type) {
    margin-left: 7px;
  }
}

@media only screen and (min-width:375px) {
  .c19:not(:last-of-type):after {
    margin-left: 5px;
  }
}

@media only screen and (min-width:1200px) {
  .c19:not(:last-of-type):after {
    content: ' | ';
  }
}

@media only screen and (min-width:1200px) {
  .c19:last-of-type {
    display: block;
  }
}

@media only screen and (max-width:330px) {
  .c19 {
    font-size: 0.85rem;
  }
}

@media only screen and (max-width:330px) {
  .c20 {
    font-size: 0.85rem;
  }
}

@media only screen and (max-width:330px) {
  .c21 {
    font-size: 0.85rem;
  }
}

<div
  class="c0"
>
  <header
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <a
            class="c5"
          >
            <h1
              class="c6"
            >
              <img
                alt="FooDublin Logo"
                class="c7"
                src="/images/logo.svg"
              />
            </h1>
          </a>
          <h2
            class="c8"
          >
            Discover the best food in Dublin
          </h2>
        </div>
      </div>
    </div>
    <div
      class="c9"
      data-testid="header-bar"
    >
      <div
        class="c10"
      >
        <div
          class="c11"
          data-testid="breadcrumbs"
        >
          <div
            class="c12"
          >
            <div
              class="c13"
            >
              <a
                class="c14"
                disabled=""
              >
                Home
              </a>
            </div>
          </div>
        </div>
        <a
          class="c5"
        >
          <i
            class="material-icons"
          >
            bookmarks
          </i>
          FAVORITES
        </a>
      </div>
    </div>
  </header>
  <main
    class="c15"
  >
    <div>
      <h1>
        Hello World
      </h1>
    </div>
  </main>
  <footer
    class="c16"
  >
    <div
      class="c17"
    />
    <div
      class="c18"
    >
      <div
        class="c19"
      >
        <p
          class="c20"
        >
          ©2022
        </p>
        <p
          class="c20"
        >
          BY
        </p>
        <a
          class="c5"
          href="https://jdmiguel.netlify.app"
        >
          JDMIGUEL
        </a>
      </div>
      <div
        class="c19"
      >
        <a
          class="c5"
        >
          <i
            class="material-icons"
          >
            bookmarks
          </i>
          FAVORITES
        </a>
      </div>
      <div
        class="c19"
      >
        <p
          class="c21"
        />
        <a
          class="c5"
          href="https://foodublin-design-system.netlify.app"
        >
          DESIGN SYSTEM
        </a>
      </div>
    </div>
  </footer>
  <div
    class="c22"
  >
    <div
      class="c23"
    >
      <button
        class="c24"
        type="button"
      >
        <i
          class="material-icons"
        >
          arrow_upward
        </i>
      </button>
    </div>
  </div>
</div>
`;
